<resources>
    <string name="app_name">Falci</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_">Continue</string>
    <string name="enter_a_city">Enter a city</string>
    <string name="your_name">Your name</string>
    <string name="pick_your_vity">Pick your city</string>
    <string name="password">Password</string>
    <string name="empty" />
    <string name="remember_me">Remember me</string>
    <string name="search_in_favourites">Search in favourites</string>
    <string name="color_of_favcard">color of favCard</string>
    <string name="time_interval_card_background">time interval card background</string>
    <string name="user">User</string>
    <string name="defaultTextOfGender">Pick your gender</string>
    <string name="defaultTextOfOccupation">Pick your occupation</string>
    <string name="defaultTextOfRelation">Pick your Relationship Status</string>
    <string name="defaultTextOfLocation">Enter a location</string>
    <string name="marital_status">Marital status</string>
    <string-array name="genders">
        <item>Pick your gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="occupations">
        <item>Pick your occupation</item>
        <item>Healthcare and Medicine</item>
        <item>Education and Teaching</item>
        <item>Information Technology (IT)</item>
        <item>Business and Management</item>
        <item>Sales and Marketing</item>
        <item>Engineering</item>
        <item>Arts and Entertainment</item>
        <item>Construction and Trades</item>
        <item>Law and Legal Services</item>
        <item>Science and Research</item>
        <item>Social Services and Nonprofits</item>
        <item>Finance and Accounting</item>
        <item>Agriculture and Farming</item>
        <item>Hospitality and Tourism</item>
        <item>Media and Communication</item>
        <item>Manufacturing and Production</item>
        <item>Transportation and Logistics</item>
        <item>Administration and Office Support</item>
        <item>Sports and Recreation</item>
        <item>Government and Public Administration</item>
        <item>Student</item>
    </string-array>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="account">Account</string>
    <string name="change_your_password">Change Your Password</string>
    <string name="seperatorline">seperatorline</string>
    <string name="buy_myra_coins">Buy Myra Coins</string>
    <string name="delete_account">Delete My Account</string>
    <string name="support">Support</string>
    <string name="change_language">Change Language</string>
    <string name="info">Info</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="lock_image">lock image</string>
    <string name="settings">Settings</string>
    <string name="settings_screen_top_banner">settings screen top banner</string>
    <string name="coin_image">coin image</string>
    <string name="payment_method_image">payment method image</string>
    <string name="language_image">language image</string>
    <string name="info_image">info image</string>
    <string name="privacy_policy_image">privacy policy image</string>
    <string name="first_digit">first digit</string>
    <string name="second_digit">second digit</string>
    <string name="thirth_digit">thirth digit</string>
    <string name="forth_digit">forth digit</string>
    <string name="fifth_digit">fifth digit</string>
    <string name="sixth_digit">sixth digit</string>
    <string name="delete_fav_card_background">delete fav card background</string>
    <string name="title_of_the_horoscope">Title Of The Horoscope</string>
    <string name="image_button_for_click_delete_fav_horoscope_card">image button for click delete fav horoscope card</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_pellentesque_dapibus_diam_quis_imperdiet_accumsan_maecenas_vitae_ex_sed_ipsum_aliquam_interdum_sed_ut_velit">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dapibus diam quis imperdiet accumsan. Maecenas vitae ex sed ipsum aliquam interdum sed ut velit.</string>
    <string name="message_to_mira">Message to Mira</string>
    <string name="completeProfileNameInputMyraSpeech">Enter your informatins for each following step</string>
    <string name="edit_favourites">Edit Favourites</string>
    <string name="favourites">FAVOURITES</string>
    <string name="cancel_fav_search_filter">cancel fav search filter</string>
    <string name="enter_your_informations">Enter your informations</string>
    <string name="forgot_my_password">I forgot my password</string>
    <string name="done_have_an_account_create_one">Dont have an account? Create one!</string>
    <string name="profile">Profile</string>
    <string name="profile_name_first_letter">profile name first letter</string>
    <string name="emptystring" />
    <string name="venus">Venus</string>
    <string name="saturn">Saturn</string>
    <string name="neptune">Neptune</string>
    <string name="mars">Mars</string>
    <string name="jupiter">Jupiter</string>
    <string name="mercury">Mercury</string>
    <string name="sun">Sun</string>
    <string name="moon">Moon</string>
    <string name="uranus">Uranus</string>
    <string name="sample_name">Random Name</string>
    <string name="sample_horoscope">Random Horoscope</string>
    <string name="planet">PLANET</string>
    <string name="sample_long_text">This is our Privacy Policy</string>
    <string name="your_favourite_horoscopes">Your Favourite Horoscopes</string>
    <string name="favourites_screen_top_banner">favourites screen top banner</string>
    <string name="logout">Logout</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">BirthDate</string>
    <string name="time_of_birth">BirthTime</string>
    <string name="location_of_birth">BirthLocation</string>
    <string name="occupation">Occupation</string>
    <string name="horoscopetype_timeinterval">HoroscopeType/TimeInterval</string>
    <string name="current_coin">Current Coin</string>
    <string name="imagebutton_of_profile">imageButton of profile</string>
    <string name="mira_with_table_on_main_menu">mira with table on main menu</string>
    <string name="back_arrow_image_button">back arrow image button</string>
    <string name="main_menu_mira">main menu mira</string>
    <string name="main_menu_mira_triangle">main menu mira triangle</string>
    <string name="click_to_get_horoscope">Click to Get Horoscope</string>
    <string name="ko_burcu_insanlar_enerji_dolu_ve_liderlik_zelliklerine_sahiptirler_bu_d_nemde_hedeflerinize_odaklanmak_i_in_m_kemmel_bir_zaman_kendinize_g_veniyorsunuz_ve_zorluklar_n_stesinden_gelebilecek_g_ce_sahipsiniz_ko_burcu_insanlar_enerji_dolu_ve_liderlik_zelliklerine_sahiptirler_bu_d_nemde_hedeflerinize_odaklanmak_i_in_m_kemmel_bir_zaman_kendinize_g_veniyorsunuz_ve_zorluklar_n_stesinden_gelebilecek_g_ce_sahipsiniz_ko_burcu_insanlar_enerji_dolu_ve_liderlik_zelliklerine_sahiptirler_ko_burcu_insanlar_enerji_dolu_ve_liderlik_zelliklerine_sahiptirler_bu_d_nemde_hedeflerinize_odaklanmak_i_in_m_kemmel_bir_zaman_kendinize_g_veniyorsunuz_ve_zorluklar_n_stesinden_gelebilecek_g_ce_sahipsiniz_ko_burcu_insanlar_enerji_dolu_ve_liderlik_zelliklerine_sahiptirler_bu_d_nemde_hedeflerinize_odaklanmak_i_in_m_kemmel_bir_zaman_kendinize_g_veniyorsunuz_ve_zorluklar_n_stesinden_gelebilecek_g_ce_sahipsiniz_ko_burcu_insanlar_enerji_dolu_ve_liderlik_zelliklerine_sahiptirler_ko_burcu_insanlar_enerji_dolu_ve_liderlik_zelliklerine_sahiptirler_bu_d_nemde_hedeflerinize_odaklanmak_i_in_m_kemmel_bir_zaman_kendinize_g_veniyorsunuz_ve_zorluklar_n_stesinden_gelebilecek_g_ce_sahipsiniz">Koç burcu insanları enerji dolu ve liderlik özelliklerine sahiptirler. Bu dönemde hedeflerinize odaklanmak için mükemmel bir zaman. Kendinize güveniyorsunuz ve zorlukların üstesinden gelebilecek güce sahipsiniz. Koç burcu insanları enerji dolu ve liderlik özelliklerine sahiptirler. Bu dönemde hedeflerinize odaklanmak için mükemmel bir zaman. Kendinize güveniyorsunuz ve zorlukların üstesinden gelebilecek güce sahipsiniz. Koç burcu insanları enerji dolu ve liderlik özelliklerine sahiptirler. Koç burcu insanları enerji dolu ve liderlik özelliklerine sahiptirler. Bu dönemde hedeflerinize odaklanmak için mükemmel bir zaman. Kendinize güveniyorsunuz ve zorlukların üstesinden gelebilecek güce sahipsiniz. Koç burcu insanları enerji dolu ve liderlik özelliklerine sahiptirler. Bu dönemde hedeflerinize odaklanmak için mükemmel bir zaman. Kendinize güveniyorsunuz ve zorlukların üstesinden gelebilecek güce sahipsiniz. Koç burcu insanları enerji dolu ve liderlik özelliklerine sahiptirler. Koç burcu insanları enerji dolu ve liderlik özelliklerine sahiptirler. Bu dönemde hedeflerinize odaklanmak için mükemmel bir zaman. Kendinize güveniyorsunuz ve zorlukların üstesinden gelebilecek güce sahipsiniz.</string>
    <string name="general">GENERAL</string>
    <string name="general_sign_card_s_image">general sign card\'s image</string>
    <string name="love">LOVE</string>
    <string name="love_sign_card_s_image">love sign card\'s image</string>
    <string name="career">CAREER</string>
    <string name="career_sign_card_s_image">career sign card\'s image</string>
    <string name="daily_button_background_image">daily button background image</string>
    <string name="weekly_button_background_image">weekly button background image</string>
    <string name="monthly_button_background_image">monthly button background image</string>
    <string name="time_interval_monthly">MONTHLY</string>
    <string name="yearly_button_background_image">yearly button background image</string>
    <string name="time_interval_yearly">YEARLY</string>
    <string name="time_interval_card_add_icon">time interval card add icon</string>
    <string name="get_your_horoscope">Get your Horoscope</string>
    <string name="get_your_horoscope_again">View this horoscope again</string>
    <string name="time_interval_weekly">WEEKLY</string>
    <string name="time_interval_daily">DAILY</string>
    <string name="use_coin">Use 10 Coin!</string>
    <string name="watch_ad_and_earn_coin">Watch Ad and Earn Coin</string>
    <string name="buy_5_coins">5 Coin</string>
    <string name="buy_25_coins">25 Coin</string>
    <string name="buy_50_coins">50 Coin</string>
    <string name="subscribe_weekly">Weekly</string>
    <string name="subscribe_monthly">Monthly</string>
    <string name="subscribe_yearly">Yearly</string>
    <string name="one_time_purchases">One Time Purchases</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="in_app_products">In App Products</string>
    <string name="sample_price_text">price</string>
    <string name="coins_and_subscriptions"><![CDATA[Coins & Subscriptions]]></string>
    <string name="sample_coin_amount">&amp;&amp;</string>
    <string name="sample_description">the description</string>
    <string name="password_again">Password again</string>
    <string name="verification_code">Verification Code</string>
    <string name="change_password">Change Password</string>
</resources>