<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity"
    android:background="@drawable/falci_background"
    tools:ignore="UnusedAttribute, SpUsage">

    <TextView
        android:id="@+id/changePasswordTitle"

        android:layout_width="wrap_content"
        android:layout_height="50dp"

        android:layout_above="@+id/changePasswordVerificationCodeCard"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"

        android:fontFamily="@font/arima_madurai_bold"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="32dp"
        tools:ignore="TextSizeCheck">

    </TextView>


    <androidx.cardview.widget.CardView
        android:id="@+id/changePasswordVerificationCodeCard"

        android:layout_width="match_parent"
        android:layout_height="65dp"

        android:layout_above="@id/changePasswordNewPasswordCard"
        android:layout_marginBottom="20dp"

        app:cardElevation="2dp"
        android:outlineAmbientShadowColor="@color/black"
        android:outlineSpotShadowColor="@color/black"

        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"

        app:cardCornerRadius="20dp">

        <EditText
            android:id="@+id/changePasswordVerificationCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="emailAddress"
            android:background="@drawable/common_text_input_field"
            android:fontFamily="@font/arima_madurai_light"
            android:hint="@string/verification_code"
            android:inputType="number"
            android:maxLength="255"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text=""
            android:textColor="@color/white"
            android:textColorHint="@color/quantum_grey"
            android:textSize="24dp"
            tools:ignore="TextFields,TextSizeCheck,VisualLintTextFieldSize" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/changePasswordNewPasswordCard"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_centerInParent="true"
        app:cardElevation="2dp"
        android:outlineAmbientShadowColor="@color/black"
        android:outlineSpotShadowColor="@color/black"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        app:cardCornerRadius="20dp">

        <EditText
            android:id="@+id/changePasswordNewPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="password"
            android:background="@drawable/common_text_input_field"
            android:fontFamily="@font/arima_madurai_light"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="255"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text=""
            android:textColor="@color/white"
            android:textColorHint="@color/quantum_grey"
            android:textSize="24dp"
            tools:ignore="VisualLintTextFieldSize,TextSizeCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/changePasswordNewPasswordAgainCard"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_below="@+id/changePasswordNewPasswordCard"
        app:cardElevation="2dp"
        android:outlineAmbientShadowColor="@color/black"
        android:outlineSpotShadowColor="@color/black"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="55dp"
        app:cardCornerRadius="20dp">

        <EditText
            android:id="@+id/changePasswordNewPasswordAgain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="password"
            android:background="@drawable/common_text_input_field"
            android:fontFamily="@font/arima_madurai_light"
            android:hint="@string/password_again"
            android:inputType="textPassword"
            android:maxLength="255"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text=""
            android:textColor="@color/white"
            android:textColorHint="@color/quantum_grey"
            android:textSize="24dp"
            tools:ignore="VisualLintTextFieldSize,TextSizeCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changePasswordButton"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_below="@+id/changePasswordNewPasswordAgainCard"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="110dp"
        android:layout_marginRight="75dp"
        android:elevation="-15dp"
        android:background="@drawable/common_next_button"
        android:fontFamily="@font/arima_madurai_bold"
        android:text="@string/change_password"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24dp"
        tools:ignore="VisualLintButtonSize,TextSizeCheck">
    </androidx.appcompat.widget.AppCompatButton>

</RelativeLayout>