<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chat_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.utkangul.falci.ChatFragment"
    android:background="#292859"
    tools:ignore="ContentDescription">

    <ImageButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/chatBackButton"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:layout_marginTop="44dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/sample_description"
        android:background="@drawable/baseline_arrow_back_24"
        android:elevation="15dp">
    </ImageButton>

    <!--coin amount-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/coinAmountContainerLayoutChat"
        android:visibility="visible"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/chatFragmentContainer"
        android:layout_marginEnd="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/coinAmountTextChat"
            android:maxLines="1"
            android:maxLength="5"
            android:gravity="center_vertical"
            android:text="@string/sample_coin_amount"
            android:fontFamily="@font/arima_madurai_bold"
            android:textSize="25dp"
            android:textColor="#FDDA0D">
        </TextView>
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="1dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/coinAmountTextChat"
            android:layout_marginStart="4dp"
            android:src="@drawable/mira_coin"
            android:contentDescription="@string/sample_description">
        </ImageView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/chatBackButton"
        android:layout_above="@+id/chatFragmentMessageInputText"
        android:layout_marginBottom="10dp"
        android:id="@+id/chatFragmentContainer">

        <ListView
            android:id="@+id/chatListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/white"
            android:dividerHeight="0dp"
            android:paddingTop="15dp"
            android:stackFromBottom="true"
            android:transcriptMode="normal">
        </ListView>

    </RelativeLayout>

    <EditText
        android:id="@+id/chatFragmentMessageInputText"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/chat_input_back_ground"
        android:drawablePadding="10dp"
        android:fontFamily="@font/arima_madurai_light"
        android:minHeight="45dp"
        android:hint="@string/message_to_mira"
        android:inputType="textMultiLine"
        android:paddingStart="20dp"
        android:paddingEnd="35dp"
        android:gravity="center_vertical"
        android:text=""
        android:imeOptions="actionDone"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18dp"
        android:autofillHints=""
        tools:ignore="SpUsage" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:id="@+id/cancelUserMessage"
        android:layout_gravity="center"
        android:layout_toEndOf="@id/sendUserMessage"
        android:layout_marginEnd="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="4dp"
        android:src="@drawable/cancel_icon"
        android:background="#292859"
        android:visibility="invisible"
        tools:ignore="VisualLintBounds">
    </ImageButton>

    <ImageButton
        android:id="@+id/sendUserMessage"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="25dp"
        android:layout_toEndOf="@id/chatFragmentMessageInputText"
        android:background="#292859"
        android:padding="4dp"
        android:src="@drawable/send_icon"
        android:visibility="visible"
        tools:ignore="SpeakableTextPresentCheck">
    </ImageButton>

</RelativeLayout>